<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.HomeNavigationScreens.SearchScreens.ResuiltSearchingActivity">



  <TextView

      android:id="@+id/city_txt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_40sdp"
      android:gravity="center"

      android:textSize="@dimen/_23ssp" />

  <TextView
      android:id="@+id/data_txt"
      android:layout_width="match_parent"
      android:layout_height="@dimen/_38sdp"
      android:gravity="center"

      android:textSize="@dimen/_14ssp" />

  <ImageView
      android:id="@+id/icon_image"
      android:layout_width="170dp"
      android:layout_height="170dp"
      android:layout_gravity="center"
      />

  <TextView
      android:id="@+id/description_txt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_margin="@dimen/_10sdp"

      android:textSize="@dimen/_20ssp" />

  <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_6sdp"
        android:layout_weight="1"
        app:cardCornerRadius="@dimen/_6sdp">

      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          style="@style/CARD_VIEW"
          android:orientation="vertical"

          >

        <TextView

            android:layout_margin="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/temperature"
            android:textSize="@dimen/_14sdp"
            style="@style/CARD_VIEW"
            />


        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/temperature"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_6sdp"
            style="@style/CARD_VIEW"
            />

        <TextView
            android:id="@+id/temp_txt"
            style="@style/CARD_VIEW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/YEllow"
            android:layout_margin="@dimen/_6sdp"
            android:background="@color/Slate_Blue_light"
            android:textSize="@dimen/_13sdp"/>
      </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_6sdp"
        android:layout_weight="1"
        app:cardCornerRadius="@dimen/_6sdp">

      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          style="@style/CARD_VIEW"
          >

        <TextView


            android:layout_margin="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/humidity"
            android:textSize="@dimen/_14sdp"
            style="@style/CARD_VIEW" />


        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/humidity"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_6sdp"
            style="@style/CARD_VIEW"
          />

        <TextView

            android:id="@+id/humidity_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/YEllow"
            android:layout_margin="@dimen/_6sdp"
            style="@style/CARD_VIEW"
            android:textSize="@dimen/_13sdp" />
      </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_6sdp"
        android:layout_weight="1"
        app:cardCornerRadius="@dimen/_6sdp">

      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          style="@style/CARD_VIEW"
          >

        <TextView

            android:layout_margin="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wind_speed"
            android:textSize="@dimen/_14sdp"
            style="@style/CARD_VIEW" />


        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/wind"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_6sdp"
            style="@style/CARD_VIEW" />

        <TextView
            android:id="@+id/wind_txt"
            style="@style/CARD_VIEW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/YEllow"
            android:layout_margin="@dimen/_6sdp"
            android:textSize="@dimen/_13sdp" />
      </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>


  </androidx.appcompat.widget.LinearLayoutCompat>

  <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_6sdp"
        android:layout_weight="1"
        app:cardCornerRadius="@dimen/_6sdp">

      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          style="@style/CARD_VIEW"
          >

        <TextView

            android:layout_margin="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pressure"
            android:textSize="@dimen/_14sdp"
            style="@style/CARD_VIEW"/>


        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/pressure_gauge"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_6sdp"
            style="@style/CARD_VIEW"/>

        <TextView

            android:id="@+id/pressure_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/YEllow"
            android:layout_margin="@dimen/_6sdp"
            style="@style/CARD_VIEW"
            android:textSize="@dimen/_13sdp" />
      </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_6sdp"
        android:layout_weight="1"
        app:cardCornerRadius="@dimen/_6sdp">

      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          style="@style/CARD_VIEW"
          >

        <TextView

            android:layout_margin="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sunrise"
            android:textSize="@dimen/_14sdp"
            style="@style/CARD_VIEW" />


        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/sunrise"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_6sdp"
            style="@style/CARD_VIEW" />

        <TextView
            style="@style/CARD_VIEW"
            android:id="@+id/sunrise_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/YEllow"
            android:layout_margin="@dimen/_6sdp"

            android:textSize="@dimen/_13sdp" />
      </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_6sdp"
        android:layout_weight="1"
        app:cardCornerRadius="@dimen/_6sdp">

      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          style="@style/CARD_VIEW"
          >

        <TextView

            android:layout_margin="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sunset"
            android:textSize="@dimen/_14sdp"
            style="@style/CARD_VIEW" />


        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/sunset"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_6sdp"
            style="@style/CARD_VIEW" />

        <TextView

            android:id="@+id/sunset_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/YEllow"
            android:layout_margin="@dimen/_6sdp"
            style="@style/CARD_VIEW"
            android:textSize="@dimen/_13sdp" />
      </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>


  </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>