<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeNavigationScreens.SettingScreens.SettingsFragment">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5">

        <TextView
            style="@style/TEXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting"
            android:textSize="@dimen/_20ssp">

        </TextView>
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.cardview.widget.CardView
            android:id="@+id/language_card_view"
            style="@style/CARD_VIEW"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_7sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CARD_VIEW">

                <ImageView
                    android:id="@+id/imageVie"
                    android:layout_width="@dimen/_27sdp"
                    android:layout_height="@dimen/_27sdp"
                    android:layout_margin="@dimen/_9sdp"
                    style="@style/CARD_VIEW"
                    android:src="@drawable/language"
                    app:layout_constraintBottom_toBottomOf="parent"

                    app:layout_constraintHorizontal_bias="0.003"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/langTxt"

                    android:layout_width="218dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    style="@style/CARD_VIEW"
                    android:text="@string/language"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageVie"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.513" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/mode_card_view"
            style="@style/CARD_VIEW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/_7sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CARD_VIEW">

                <ImageView
                    android:id="@+id/nn"
                    android:layout_width="@dimen/_27sdp"
                    android:layout_height="@dimen/_27sdp"
                    android:layout_margin="@dimen/_9sdp"
                    style="@style/CARD_VIEW"
                    android:src="@drawable/mode_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.003"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/modeTxt"
                    style="@style/CARD_VIEW"
                    android:layout_width="218dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"

                    android:text="@string/mode"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/nn"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.513" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/units_card_view"
            style="@style/CARD_VIEW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/_7sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/CARD_VIEW">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/_27sdp"
                    android:layout_height="@dimen/_27sdp"
                    android:layout_margin="@dimen/_9sdp"
                    style="@style/CARD_VIEW"
                    android:src="@drawable/celsius"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.003"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/unitsTxt"

                    android:layout_width="218dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    style="@style/CARD_VIEW"
                    android:text="@string/units"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.513" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:layout_marginTop="@dimen/_30sdp"
        android:id="@+id/imageView5"
        android:layout_width="166dp"
        android:layout_height="98dp"
        android:foregroundGravity="center"
        android:src="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>